<resources>
    <string name="app_name">WeatherApp</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="humidity">Humidity: %1$s</string>
    <string name="temperature">Temperature: %1$s°</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="temperature_demo">Temperature: --</string>
    <string name="humidity_demo">Humidity: --</string>
    <string name="no_info_demo">No info..</string>
    <string name="gps">GPS</string>
    <string name="hint_enter_zip_or_city">Enter ZIP or City</string>
    <string name="search">Search</string>
    <string name="location">Location</string>
</resources>
